--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Codigo QR</string>
+    <string name="app_name">Reconocimiento Facial - MASHKA FÚTBOL</string>
     <string name="btnScan">lectura QR</string>
 </resources>
